prevent flicker of various elements on transformation in Safari

--- a/app/assets/stylesheets/pages/_layout.scss
+++ b/app/assets/stylesheets/pages/_layout.scss
@@ -1,7 +1,7 @@
 body {
   font-size: 14px;
   background-color: $background;
-  background-image:url(../images/switcher/6.jpg)
+  background-image:url(../images/switcher/6.jpg);
 }
 
 section {
@@ -16,6 +16,11 @@ a {
   &:hover {
     text-decoration: underline;
   };
+}
+
+/* prevents flicker on transformations in Safari- see: http://stackoverflow.com/questions/3461441/prevent-flicker-on-webkit-transition-of-webkit-transform*/
+.no-flicker {
+  -webkit-transform: translateZ(0);
 }
 
 .bottomspace {
@@ -92,6 +97,7 @@ h2 {
 
 .navbar {
   margin: 0;
+  -webkit-transform: translateZ(0);
   .brand {
     text-transform: none;
   }
